scripts/content/breeding/manage-stallions.css
@import '../../../public/style/theme.css';

.hn-plus-calculate-button {
    background-color: #dfe5eb;
    border-color: #ced4da;
    border-radius: 0 .25rem .25rem 0;
    border-style: solid;
    border-width: 1px 1px 1px 0;
    box-sizing: border-box;
    cursor: pointer;
    display: block;
    font-size: 0;
    float: right;
    height: calc(2.25rem + 2px);
    object-fit: contain;
    object-position: center center;
    transition: border-color 150ms ease-in-out, box-shadow 150ms ease-in-out;
    width: calc(2.25rem + 2px);
}

.hn-plus-calculate-button::before {
    content: url('chrome-extension://aonknefdnheomhlfcnjdicnkbfdakcdo/public/icons/calculate.svg');
    height: 100%;
    max-width: 100%;
}

.hn-plus-calculate-input,
.form-control.hn-plus-calculate-input {
    border-radius: .25rem 0 0 .25rem;
    border-right-width: 0;
    display: inline-block;
    width: calc(100% - 2.25rem - 2px);
}

.hn-plus-calculate-input:focus:not([readonly]) + .hn-plus-calculate-button {
    border-color: #dc3545 #dc3545 #dc3545 #ced4da;
    box-shadow: 0 1px 0 0 #dc3545;
}

.hn-plus-calculating,
.form-control.hn-plus-calculating {
	animation: hn-plus-calculating 750ms linear infinite;
	background-image: linear-gradient(135deg, 
        #ffffff 25%, 
        var(--hn-plus-theme-tertiary, #8ea8c3) 25%, 
        var(--hn-plus-theme-tertiary, #8ea8c3) 50%, 
        #ffffff 50%, 
        #ffffff 75%, 
        var(--hn-plus-theme-tertiary, #8ea8c3) 75%, 
        var(--hn-plus-theme-tertiary, #8ea8c3) 100%
    );
    background-size: 4rem 4rem;
    color: transparent;
}

.hn-plus-calculating + .hn-plus-calculate-button {
    cursor: none;
}

.hn-plus-calculating + .hn-plus-calculate-button::before {
    opacity: 0.25;
}

@keyframes hn-plus-calculating {
	0% { background-position: 0 0 }
	100% { background-position: 24% 0 }
}

